ci pre-run edits patched v3.2.2

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,13 +3,13 @@ name: Build Status
 on:
   workflow_dispatch:
   push:
-    branches: [master]
+    branches: [master, 'main']
   pull_request:
     branches: [master]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     strategy:
       matrix:
